# toprodimo

./: README.md  pyproject.toml
src/toprodimo/: __init__.py  __main__.py  _typing.py  main.py
